Add own class for extra large buttons.

--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -96,7 +96,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <button type="button" class="btn btn-lg btn-block btn-primary" data-ng-click="julkaisuhaettu=true; useVaihe(2)">
+    <button type="button" class="btn btn-lg btn-block btn-extra-lg btn-primary" data-ng-click="julkaisuhaettu=true; useVaihe(2)">
       {{ i18n.content.esitayta.ohita[lang] }}
     </button>
   </div>
