--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -343,7 +343,7 @@
 
 <div>
     <button
-            class="btn btn-lg btn-block btn-primary"
+            class="btn btn-lg btn-extra-lg btn-block btn-primary"
             type="button"
             data-ng-click="updateRinnakkaistallennusData(file); useVaihe(5)">
         {{i18n.content.tietojensyotto.jatka[lang]}}
