--- a/src/app/html/tarkasta.html
+++ b/src/app/html/tarkasta.html
@@ -209,7 +209,7 @@
 <div class="row">
   <div class="col-xs-12">
 
-    <button class="btn btn-lg btn-block btn-primary"
+    <button class="btn btn-lg btn-extra-lg btn-block btn-primary"
             data-ui-sref="justus({vaihe:1})"
             data-ng-show="publications.odottavat"
             data-ng-bind="i18n.content.tarkasta.uusi[lang]">
