--- a/src/app/html/valitse.html
+++ b/src/app/html/valitse.html
@@ -4,19 +4,19 @@
 
 <div class="row">
   <div class="col-xs-12 col-sm-4">
-    <button class="btn btn-block btn-lg btn-primary"
+    <button class="btn btn-block btn-lg btn-extra-lg btn-primary"
       data-ui-sref="justus({id:id,vaihe:vaihe||1})">
       <i class="fa fa-upload" aria-hidden="true"></i> {{ i18n.content.valitse.tallenna[lang] }}
     </button>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <a class="btn btn-block btn-lg btn-primary"
+    <a class="btn btn-block btn-lg btn-extra-lg btn-primary"
       data-ui-sref="omat()">
       <i class="fa fa-list" aria-hidden="true"></i> {{ i18n.content.valitse.omat[lang] }}
     </a>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <a class="btn btn-block btn-lg btn-primary"
+    <a class="btn btn-block btn-lg btn-extra-lg btn-primary"
       data-ng-if="hasAccessToApprove()"
       data-ui-sref="hyvaksy()">
       <i class="fa fa-check" aria-hidden="true"></i> {{ i18n.content.valitse.hyvaksy[lang] }}
