--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -1,6 +1,6 @@
 .btn-primary {
-  &.btn-lg {
-    //padding: $padding-large-vertical*2 $padding-large-horizontal;
+  &.btn-extra-lg {
+    padding: $padding-large-vertical*2 $padding-large-horizontal;
   }
   &.btn-secondary,
   &:focus,
