--- a/src/app/html/index_part.html
+++ b/src/app/html/index_part.html
@@ -1,8 +1,8 @@
-<button class="btn btn-block btn-lg btn-primary"
+<button class="btn btn-block btn-lg btn-extra-lg btn-primary"
   data-ng-click="login()">
   <i class="fa fa-sign-in" aria-hidden="true"></i> {{i18n.etusivu.kirjaudu[lang]}}
 </button>
-<button class="btn btn-block btn-lg btn-primary"
+<button class="btn btn-block btn-lg btn-extra-lg btn-primary"
   data-ui-sref="valitse()"
   data-ng-if="demoEnabled">
   <i class="fa fa-sign-in" aria-hidden="true"></i> Demo
