--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1767,7 +1767,7 @@
 <div class="row form-group">
   <!-- <div class="row"> -->
   <div class="col-md-12">
-    <button class="btn btn-lg btn-block btn-primary"
+    <button class="btn btn-lg btn-extra-lg btn-block btn-primary"
             type="button"
             data-ng-click="useVaihe(4)">
       {{i18n.content.tietojensyotto.rinnakkaistallennusvalinta[lang]}}
