--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -63,6 +63,10 @@
   padding: 0 $padding-small-horizontal
 };
 
+.pl-x {
+  padding: 0 0 0 6px;
+}
+
 .py {
   padding: $padding-small-vertical 0;
 }
