Show admin view only for owners.

--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -51,7 +51,7 @@
         </span>
     </div>
 
-    <div>
+    <div data-ng-if="initialRole === 'owner'">
       <button href data-ui-sref="admin()" class="btn btn-link font-weight-bold">Käyttäjien hallinta</button>
     </div>
 
