Show person list previes as table. Send immediately after upload first API. Show alert dialog after requests.

--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -23,11 +23,11 @@ $text-color: $brand-primary;
 $body-bg: #DDDDDD;
 
 $state-success-text: $brand-primary-dark;
-$state-success-bg: lighten($brand-primary, 50%);
+//$state-success-bg: lighten($brand-primary, 50%);
 $state-success-border: transparent;
 
 $state-info-text: $brand-info;
-$state-info-bg: lighten($brand-info, 50%);
+//$state-info-bg: lighten($brand-info, 50%);
 $state-info-border: transparent;
 
 $state-warning-text: $brand-white;
