Show modal dialog before removing person.

--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -16,6 +16,7 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals";
 
 // Components
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
@@ -36,6 +37,7 @@
 // Utility classes
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+
 // Vendor ends
 
 // App custom styles
