Hide other content when person form is open.

--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -112,6 +112,7 @@
         </div>
     </div>
 
+    <div data-ng-hide="showEditDialog">
     <div data-ng-if="showList" style="margin: 30px 15px;">
         <span data-ng-click="closeList()" class="pull-right cursor-pointer justus-close-btn">
             <i class="fa fa-close fa-lg"></i>
@@ -187,5 +188,5 @@
             </button>
         </div>
     </div>
-
+    </div>
 </div>
