--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -2,19 +2,32 @@ html,
 body {
   background-color: $body-bg;
   font-family: 'PT Sans', sans-serif;
-  height: 100%;
   width: 100%;
+  position: relative;
+  min-height: 100%;
+}
+
+p {
+  font-family: $font-family-secondary;
+  font-size: $font-size-xl;
+}
+
+h3 {
+  font-weight: bold;
+  color: $text-color-dark;
 }
 
 .main-wrapper {
   background-color: $body-bg;
   height: 100%;
+  min-height: 100%;
 }
 
 .main-container {
-  background-color: $brand-primary;
-  height: 100%;
+  background-color: $brand-white;
   padding: 0;
+  position: relative;
+  min-height: 100vh;
 }
 
 .header-wrapper {
@@ -31,9 +44,24 @@ body {
   padding-bottom: $padding-large-vertical*10;
 }
 
+.footer-wrapper {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+}
+
 .footer {
+  height: 100px;
   background-color: $brand-primary;
   color: $brand-white;
   padding: $padding-large-vertical $padding-large-horizontal;
   margin: 0;
+}
+
+// responsive
+@media (min-width: 1400px) {
+  .container{
+    width: 1280px;
+  }
 }
