--- a/src/app/scss/components/_navigation.scss
+++ b/src/app/scss/components/_navigation.scss
@@ -11,7 +11,7 @@
     margin-bottom: $padding-small-vertical;
 
     &:hover {
-      background: $brand-secondary;
+      background: $brand-primary-dark;
       color: $brand-white;
       text-decoration: none;
     }
