Style changes for header and footer.

--- a/src/app/html/footer.html
+++ b/src/app/html/footer.html
@@ -9,7 +9,7 @@
       -->
     </div>
   </div>
-  <div class="col-xs-4 text-center">
+  <div class="col-xs-4 text-center text-secondary">
     <br>{{i18n.footer.csc.name[lang]}}<br>
     <!--
     {{i18n.footer.csc.address[lang]}}<br>
