--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -1,57 +1,39 @@
-<div class="row">
-  <div class="col-xs-12 col-md-7">
-    <div data-ng-if="state.name=='index'">
-      <img src="img/justus2.png" alt="{{i18n.header.logotext[lang]}" class="img-responsive">
+<div class="row m-b">
+    <div class="col-xs-12 col-md-7">
+        <div data-ng-if="state.name=='index'">
+            <img src="img/justus2.png" alt="{{i18n.header.logotext[lang]}" class="img-responsive">
+        </div>
+        <div data-ng-if="state.name!='index'">
+            <div>
+                <a href data-ui-sref="valitse()"><img src="img/justus2.png" alt="{{i18n.header.logotext[lang]}"
+                                                      class="img-responsive"></a>
+            </div>
+        </div>
     </div>
-    <div data-ng-if="state.name!='index'">
-      <div>
-        <a href data-ui-sref="valitse()"><img src="img/justus2.png" alt="{{i18n.header.logotext[lang]}" class="img-responsive"></a>
-      </div>
-      <div class="navigation">
-        <a href data-ui-sref="valitse()"
-          data-ng-class="getMenuClass('/valitse')"
-          data-ng-bind="i18n.content.valitse.etusivu[lang]">
-        </a>
-        <a href data-ui-sref="justus({id:id,vaihe:vaihe||1})"
-          data-ng-class="getMenuClass('/justus')"
-          data-ng-bind="i18n.content.valitse.tallenna[lang]">
-        </a>
-        <a href data-ui-sref="omat()"
-          data-ng-class="getMenuClass('/omat')"
-          data-ng-bind="i18n.content.valitse.omat[lang]">
-        </a>
-        <a data-ng-if="hasAccessToApprove()"
-          href data-ui-sref="hyvaksy()"
-          data-ng-class="getMenuClass('/hyvaksy')"
-          data-ng-bind="i18n.content.valitse.hyvaksy[lang]">
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-md-5 pull-right text-right pl-0">
-    <div  data-ng-if="state.name!='index' && user">
+    <div class="col-xs-12 col-md-5 pull-right text-right pl-0">
+        <div data-ng-if="state.name!='index' && user">
       <span><i>{{user.name}}</i>,&nbsp;
         <span data-ng-if="initialRole === 'owner'" class="text-capitalize">{{user.role}}, {{ user.organization.code}}:&nbsp;</span>{{ user.organization.name }}</span>
-      <span>| <a href="" data-ng-click="logout()">{{i18n.header.logout[lang]}}</a></span>
-    </div>
-    <div>
+            <span>| <a href="" data-ng-click="logout()">{{i18n.header.logout[lang]}}</a></span>
+        </div>
+        <div>
       <span>
         <a href="https://wiki.eduuni.fi/display/CscJustus/Ohjeet" target="__blank">
           <i class="fa fa-question-circle justus-info"></i> {{i18n.header.help[lang]}}
         </a>
       </span>
-      <span data-ng-if="state.name !== 'justus'">
-      <span>|</span>
+            <span data-ng-if="state.name !== 'justus'">
+        <span>|</span>
 
-      <a href data-ng-show="lang!='FI'" data-ng-click="changeLang('FI')">{{i18n.header.lang.FI}}</a>
-      <span data-ng-show="lang!='FI'">|</span>
-      <a href data-ng-show="lang!='SV'" data-ng-click="changeLang('SV')">{{i18n.header.lang.SV}}</a>
-      <span data-ng-show="lang=='FI'">|</span>
-      <a href data-ng-show="lang!='EN'" data-ng-click="changeLang('EN')">{{i18n.header.lang.EN}}</a>
-        </span>
-    </div>
+        <a href data-ng-show="lang!='FI'" data-ng-click="changeLang('FI')">{{i18n.header.lang.FI}}</a>
+        <span data-ng-show="lang!='FI'">|</span>
+        <a href data-ng-show="lang!='SV'" data-ng-click="changeLang('SV')">{{i18n.header.lang.SV}}</a>
+        <span data-ng-show="lang=='FI'">|</span>
+        <a href data-ng-show="lang!='EN'" data-ng-click="changeLang('EN')">{{i18n.header.lang.EN}}</a>
+      </span>
+        </div>
 
-    <span data-ng-if="initialRole === 'owner'">
+        <span data-ng-if="initialRole === 'owner'">
       <select data-ng-model="selectedDemoUserRole">
         <option value="" disabled selected>Valite rooli</option>
         <option value="admin">Admin</option>
@@ -61,13 +43,37 @@
         <option value="" disabled selected>Valite organisaatio</option>
         <option data-ng-repeat="organization in organisationList" value="{{organization.arvo}}">{{organization.arvo}}: {{organization.value}}</option>
       </select>
-      <button class="btn" data-ng-click="setDemoUserOrganization(selectedDemoUserOrganizationCode, selectedDemoUserRole)">
+      <button class="btn"
+              data-ng-click="setDemoUserOrganization(selectedDemoUserOrganizationCode, selectedDemoUserRole)">
         Lähetä
       </button>
         <button class="btn btn-link" data-ng-click="resetDemoUser()">
           <span class=""><i class="fa fa-close fa-lg"></i></span>
       </button>
     </span>
-    
-  </div>
+
+    </div>
+</div>
+<div class="row" data-ng-if="state.name!='index'">
+    <div class="col-md-12">
+        <div class="navigation">
+            <a href data-ui-sref="valitse()"
+               data-ng-class="getMenuClass('/valitse')"
+               data-ng-bind="i18n.content.valitse.etusivu[lang]">
+            </a>
+            <a href data-ui-sref="justus({id:id,vaihe:vaihe||1})"
+               data-ng-class="getMenuClass('/justus')"
+               data-ng-bind="i18n.content.valitse.tallenna[lang]">
+            </a>
+            <a href data-ui-sref="omat()"
+               data-ng-class="getMenuClass('/omat')"
+               data-ng-bind="i18n.content.valitse.omat[lang]">
+            </a>
+            <a data-ng-if="hasAccessToApprove()"
+               href data-ui-sref="hyvaksy()"
+               data-ng-class="getMenuClass('/hyvaksy')"
+               data-ng-bind="i18n.content.valitse.hyvaksy[lang]">
+            </a>
+        </div>
+    </div>
 </div>
