--- a/src/app/scss/components/_ui-select.scss
+++ b/src/app/scss/components/_ui-select.scss
@@ -29,13 +29,26 @@
 
   .ui-select-choices-row {
     //padding: $padding-small-vertical $padding-small-horizontal;
-    padding: $padding-small-vertical $padding-small-horizontal;
+    //padding: $padding-small-vertical $padding-small-horizontal;
     span {
-        padding: 3px 10px;
+        padding: 7px 0;
+      margin: 0 10px;
+        &:hover {
+          color: $brand-white;
+          background-color: $brand-primary;
+        }
     }
+
+
   }
+
+
 }
 
 .ui-select-match.no-ellipsis span {
   text-overflow: initial;
+}
+.ui-select-bootstrap .ui-select-choices-row.active>span {
+  color: $brand-white;
+  background-color: $brand-primary;
 }
