--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -22,82 +22,86 @@
 </div -->
 
 <div class="alert alert-transparent text-center" data-ng-if="justus.julkaisu.id">
-  <h4>Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</h4>
-  <button class="btn btn-primary" data-ng-click="clearFormAndReturnToStart()">Hylkää muutokset</button>
+    <h4>Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</h4>
+    <button class="btn btn-primary" data-ng-click="clearFormAndReturnToStart()">Hylkää muutokset</button>
 </div>
 
-
-<div class="row m-b">
-  <div class="col-sm-6 col-xs-12">
-    <h3>{{i18n.content.esitayta.doihaku.title[lang]}}</h3>
-    <p data-ng-bind="i18n.content.esitayta.doihaku.info[lang]"></p>
-    <div class="input-group">
-      <input type="text"
-             data-ng-model="julkaisunhakudoi"
-             class="form-control"
-             placeholder='{{i18n.content.esitayta.doihaku.tunniste.tooltip[lang]}}'>
-      <span class="input-group-btn">
-        <button class="btn btn-secondary"
-                data-ng-click="useJulkaisunnimi('CrossRef',julkaisunhakudoi)"
-                data-ng-bind="i18n.content.esitayta.doihaku.hae[lang]">
-        </button>
-      </span>
-    </div>
-  </div>
-
-  <div class="col-sm-6 col-xs-12">
-    <h3>{{i18n.content.esitayta.etsijulkaisu.title[lang]}}</h3>
-    <p data-ng-bind="i18n.content.esitayta.etsijulkaisu.info[lang]"></p>
-    <!-- {{i18n.content.esitayta.etsijulkaisu.tekija[lang]}} -->
-    <div class="form-group">
-      <input type="text" class="form-control" data-ng-model="julkaisunhakutekija"
-             placeholder="{{i18n.content.esitayta.etsijulkaisu.tekija.tooltip[lang]}}">
+<div class="esitaytto-container px">
+    <div class="row m-b px">
+        <div class="col-xs-12">
+            <h3>{{i18n.content.esitayta.doihaku.title[lang]}}</h3>
+            <p data-ng-bind="i18n.content.esitayta.doihaku.info[lang]"></p>
+            <!--      <div class="row">-->
+            <!--        <div class="col-xs-10">-->
+            <div class="input-group">
+                <input type="text"
+                       data-ng-model="julkaisunhakudoi"
+                       class="form-control"
+                       placeholder='{{i18n.content.esitayta.doihaku.tunniste.tooltip[lang]}}'>
+                <span class="input-group-btn">
+              <button class="btn btn-secondary"
+                      data-ng-click="useJulkaisunnimi('CrossRef',julkaisunhakudoi)"
+                      data-ng-bind="i18n.content.esitayta.doihaku.hae[lang]">
+              </button>
+            </span>
+            </div>
+        </div>
     </div>
 
-    <div class="form-group">
-      <ui-select data-ng-model="julkaisu.selected"
-                 theme="bootstrap" uis-open-close="onOpenClose(isOpen, $select.selected.title)">
-        <ui-select-match  class="ui-select-match"
-                          placeholder="{{i18n.content.esitayta.etsijulkaisu.picktip[lang]}}">
-          {{$select.selected.title}}
-        </ui-select-match>
-        <ui-select-choices repeat="o in julkaisunnimet | filter: $select.search"
-                           refresh="refreshJulkaisunnimet($select.search,julkaisunhakutekija)"
-                           refresh-delay="3000">
-          <div>
-            <span class="justus-dim-sm">{{o.source}} {{o.doi}}</span>
-            <br>{{o.title}}
-            <br>{{o.author}}
-          </div>
-        </ui-select-choices>
-      </ui-select>
+    <div class="row px">
+        <div class="col-xs-12">
+            <h3>{{i18n.content.esitayta.etsijulkaisu.title[lang]}}</h3>
+            <p data-ng-bind="i18n.content.esitayta.etsijulkaisu.info[lang]"></p>
+            <div class="form-group">
+                <input type="text" class="form-control" data-ng-model="julkaisunhakutekija"
+                       placeholder="{{i18n.content.esitayta.etsijulkaisu.tekija.tooltip[lang]}}">
+            </div>
+
+            <div class="form-group">
+                <ui-select data-ng-model="julkaisu.selected"
+                           theme="bootstrap" uis-open-close="onOpenClose(isOpen, $select.selected.title)">
+                    <ui-select-match class="ui-select-match"
+                                     placeholder="{{i18n.content.esitayta.etsijulkaisu.picktip[lang]}}">
+                        {{$select.selected.title}}
+                    </ui-select-match>
+                    <ui-select-choices repeat="o in julkaisunnimet | filter: $select.search"
+                                       refresh="refreshJulkaisunnimet($select.search,julkaisunhakutekija)"
+                                       refresh-delay="2000">
+                        <div>
+                            <span class="justus-dim-sm">{{o.source}} {{o.doi}}</span>
+                            <br>{{o.title}}
+                            <br>{{o.author}}
+                        </div>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+    </div>
+    <div class="row px">
+        <div class="col-xs-6">
+            <i class="fa fa-spinner fa-spin fa-3x pull-right" data-ng-show="virtaLataa"></i>
+        </div>
+        <div class="col-xs-6">
+            <button class="btn btn-secondary  pull-right"
+                    data-ng-click="useJulkaisunnimi(julkaisu.selected.source, julkaisu.selected.identifier)"
+                    data-ng-bind="i18n.content.esitayta.hae[lang]">
+            </button>
+        </div>
     </div>
 
-    <div class="text-right">
-      <button class="btn btn-secondary"
-              data-ng-click="useJulkaisunnimi(julkaisu.selected.source, julkaisu.selected.identifier)"
-              data-ng-bind="i18n.content.esitayta.hae[lang]">
-      </button>
-    </div>
-
-  </div>
-  <div class="text-center">
-    <i class="fa fa-spinner fa-spin fa-2x" data-ng-show="crossrefTaiVirtaLataa"></i>
-  </div>
 </div>
-
 <div class="row" data-ng-show="julkaisu.selected.organisation == user.organization.code">
-  <div class="col-xs-12">
-    <h3>
-      *Mahdollinen duplikaatti*
-    </h3>
-  </div>
+    <div class="col-xs-12">
+        <h3>
+            *Mahdollinen duplikaatti*
+        </h3>
+    </div>
 </div>
 
 <div class="row">
-  <div class="col-xs-12 text-center">
-    <button type="button" class="btn btn-lg btn-primary" data-ng-click="julkaisuhaettu=true; useVaihe(2)">
-      {{ i18n.content.esitayta.ohita[lang] }}
-    </button>
-  </div>
+    <div class="col-xs-12 text-center">
+        <button type="button" class="btn btn-lg btn-primary" data-ng-click="julkaisuhaettu=true; useVaihe(2)">
+            {{ i18n.content.esitayta.ohita[lang] }}
+        </button>
+    </div>
 </div>
