--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -6,6 +6,9 @@
   margin-top: $padding-small-vertical;
 }
 
+.font-weight-500 {
+  font-weight: 500;
+}
 
 .text-gray {
   color: 	#8c8c8c;
@@ -105,9 +108,6 @@
   padding-left: 10px !important;
 }
 
-.dropdown-height-300 > .ui-select-choices {
-  max-height: 300px !important;
-}
 
 input[type=number]
 {
