--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -1,7 +1,7 @@
 html,
 body {
   background-color: $body-bg;
-  font-family: 'PT Sans', sans-serif;
+  font-family: $font-family-sans-serif;
   width: 100%;
   position: relative;
   min-height: 100%;
@@ -15,6 +15,11 @@ p {
 h3 {
   font-weight: bold;
   color: $text-color-dark;
+}
+
+
+.text-secondary {
+  font-family: $font-family-secondary;
 }
 
 .main-wrapper {
@@ -31,7 +36,8 @@ h3 {
 }
 
 .header-wrapper {
-  padding: $padding-large-vertical 0;
+  //padding: $padding-large-vertical 0;
+  padding-top: $padding-large-vertical;
 }
 
 .content-wrapper {
@@ -41,7 +47,15 @@ h3 {
 
 .view-wrapper {
   padding-top: $padding-large-vertical;
-  padding-bottom: $padding-large-vertical*10;
+  padding-bottom: 100px
+}
+
+.esitaytto-container {
+  padding-bottom: 50px;
+}
+
+.form-container {
+  margin-bottom: 50px;
 }
 
 .footer-wrapper {
