--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -55,6 +55,8 @@ $padding-small-horizontal: 10px;
 $padding-xs-vertical: 1px;
 $padding-xs-horizontal: 5px;
 
+$border-radius-base: 2px;
+
 // Typography
 $font-size-base: 14px;
 $font-size-xl: 16px;
