--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -1,11 +1,13 @@
+.btn {
+  line-height: 1.6;
+  padding: 8px 16px;
+  font-family: $font-family-secondary;
+}
+
+
 .btn-primary {
   border-color: $brand-primary;
   font-family: $font-family-secondary;
-  &.btn-lg {
-    //padding: $padding-large-vertical*2 $padding-large-horizontal;
-    padding-left: $padding-large-vertical*2;
-    padding-right: $padding-large-vertical*2;
-  }
   &.btn-secondary,
   &:focus,
   &:active {
@@ -17,6 +19,14 @@
       color: $brand-white;
     }
   }
+}
+
+.btn-lg {
+  padding-left: $padding-large-vertical*2;
+  padding-right: $padding-large-vertical*2;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-weight: 300;
 }
 
 .btn-secondary {
