--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -4,9 +4,11 @@
     <div class="px mb-l" data-ng-if="showEditDialog">
 
         <form name="personForm" novalidate>
-        <span data-ng-click="closeForm()" class="pull-right cursor-pointer justus-close-btn" title="Sulje">
-            <i class="fa fa-close fa-lg"></i>
-        </span>
+          <span class="btn btn-default pull-right "
+                data-ng-click="closeForm()"
+                title="Sulje">
+              <i class="fa fa-close fa-lg"></i>
+          </span>
 
         <h4 data-ng-if="selectedPerson.id" class="font-weight-bold">Muokkaat henkilöä: {{selectedPerson.etunimi}} {{selectedPerson.sukunimi}}</h4>
         <h4 data-ng-if="!selectedPerson.id" class="font-weight-bold">Lisää uusi henkilö</h4>
@@ -14,6 +16,7 @@
         <div class="row form-group" id="firstnameGroup">
             <div class="col-xs-12 ">
                 <label class="control-label">Etunimi</label>
+                <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
                 <input type="text" class="form-control" name="firstname"
                        data-ng-model="selectedPerson.etunimi" required>
             </div>
@@ -21,13 +24,15 @@
         <div class="row form-group"  id="lastnameGroup">
             <div class="col-xs-12">
                 <label class="control-label">Sukunimi</label>
+                <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
                 <input type="text" class="form-control" name="lastname"
                        data-ng-model="selectedPerson.sukunimi" required>
             </div>
         </div>
         <div class="row form-group" id="hrnumberGroup">
             <div class="col-xs-12">
-                <label class="control-label">Hr numero</label>
+                <label class="control-label">Tunniste / ID</label>
+                <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
                 <input type="text" class="form-control" name="hrnumber"
                        data-ng-model="selectedPerson.hrnumero"
                        data-ng-disabled="selectedPerson.id"
@@ -62,7 +67,7 @@
                                >
                     </div>
                     <div class="col-xs-1">
-                        <span class="btn btn-primary"
+                        <span class="btn btn-danger"
                               data-ng-click="removeAlayksikko($index)"
                               data-ng-hide="selectedPerson.alayksikko.length<2"
                               title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
@@ -75,7 +80,9 @@
         <div class="row form-group" data-ng-if="isFieldVisible('alayksikko')" id="alayksikkoGroup">
             <div class="col-xs-12">
                 <label class="control-label">Lisää alayksiköitä</label>
+                <i data-ng-if="isFieldRequired('alayksikko')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
             </div>
+
             <div class="col-xs-12 col-sm-5">
                 <ui-select data-ng-model="alayksikkovuosi.selected"
                            theme="bootstrap">
@@ -122,9 +129,11 @@
 
     <div data-ng-hide="showEditDialog">
     <div data-ng-if="showList" style="margin: 30px 15px;">
-        <span data-ng-click="closeList()" class="pull-right cursor-pointer justus-close-btn">
-            <i class="fa fa-close fa-lg"></i>
-        </span>
+        <span class="btn btn-default pull-right "
+              data-ng-click="closeList()"
+              title="Sulje">
+              <i class="fa fa-close fa-lg"></i>
+          </span>
         <person-publication-list-directive
                                            person="personToShow"
                                            publication-list="publicationList"
