Move person table texts to i18n file.

--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -167,11 +167,11 @@
                 <table class="table table-condensed table-striped">
                     <thead>
                         <tr>
-                            <th class="text-xl">HRnumero</th>
-                            <th class="text-xl">Etunimi</th>
-                            <th class="text-xl">Sukunimi</th>
-                            <th class="text-xl">Orcid</th>
-                            <th class="text-xl">Muokattu</th>
+                            <th class="text-xl">{{i18n.admin.content.lista.tunniste[lang]}}</th>
+                            <th class="text-xl">{{i18n.admin.content.lista.etunimi[lang]}}</th>
+                            <th class="text-xl">{{i18n.admin.content.lista.sukunimi[lang]}}</th>
+                            <th class="text-xl">{{i18n.admin.content.lista.orcid[lang]}}</th>
+                            <th class="text-xl">{{i18n.admin.content.lista.muokattu[lang]}}</th>
                             <th></th>
                         </tr>
                     </thead>
