--- a/src/app/scss/components/_form.scss
+++ b/src/app/scss/components/_form.scss
@@ -36,6 +36,17 @@
 .form-control:-ms-input-placeholder { font-weight: 300; }  /* Internet Explorer 10-11 */
 .form-control::-ms-input-placeholder { font-weight: 300; }  /* Microsoft Edge */
 
+.publication-search {
+  .form-control {
+    &::-webkit-input-placeholder { font-size: 14px; }
+    &:-moz-placeholder { font-size: 14px; }
+    &::-moz-placeholder { font-size: 14px; }
+    &:-ms-input-placeholder { font-size: 14px; }
+    &::-ms-input-placeholder { font-size: 14px;}
+  }
+
+}
+
 
 .form-control-feedback {
   display: none;
