--- a/src/app/scss/components/_ui-select.scss
+++ b/src/app/scss/components/_ui-select.scss
@@ -38,11 +38,7 @@
           background-color: $brand-primary;
         }
     }
-
-
   }
-
-
 }
 
 .ui-select-match.no-ellipsis span {
@@ -51,4 +47,17 @@
 .ui-select-bootstrap .ui-select-choices-row.active>span {
   color: $brand-white;
   background-color: $brand-primary;
+}
+
+.publication-search {
+  .ui-select-bootstrap{
+    .form-control {
+      font-size: $font-size-base;
+    }
+    .ui-select-placeholder {
+      font-weight: 300;
+      color: #999;
+      padding-top: 5px;
+    }
+  }
 }
