Add font weight 700 to Muli font.

--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -10,12 +10,20 @@
   font-weight: 500;
 }
 
+.font-weight-700 {
+  font-weight: 700;
+}
+
 .text-gray {
-  color: 	#8c8c8c;
+  color: #8c8c8c;
 }
 
 .text-xl {
   font-size: 1.2em;
+}
+
+.mt-0 {
+  margin-top: 0;
 }
 
 .m-b {
